<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boinky Oinky</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcomer">Boinky Oinky</string>
    <string name="title_activity_welcome">Boinky Oinky</string>
    <string name="title_activity_testing">Boinky Oinky</string>
    <string name="title_activity_score_viewer">Boinky Oinky</string>
    <string name="hscore">"Best Score: "</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="yscore">"Your score : "</string>
    <string name="tryagain">Try again</string>
    <string name="bestscore">""Best Score : "</string>
    <string name="title_activity_help">HelpActivity</string>

</resources>
